# CXX_Template

./: CMakeLists.txt  README.md  build.sh
.cache/clangd/index/: add.cpp.9743AF199D3BAB19.idx  add.hpp.AEF05B6C3B966344.idx  main.cpp.8506702E0940C3C9.idx
src/: add.cpp  main.cpp
